src/parser.output
Terminals unused in grammar

    tDOT
    tMACRO
    tSTATIC
    tLBRACE
    tRBRACE


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | stmts

    3 stmts: stmt tSEMI
    4      | stmts stmt tSEMI

    5 stmt: expr
    6     | func
    7     | return_expr
    8     | cond
    9     | do_block
   10     | while_loop
   11     | import_stmt
   12     | class_stmt

   13 import_stmt: tIMPORT tIDENT

   14 class_method: proto tSEMI stmts tEND
   15             | proto tSEMI tEND

   16 class_body: class_method tSEMI
   17           | class_body class_method tSEMI

   18 class_stmt: tCLASS tIDENT tSEMI tEND
   19           | tCLASS tIDENT tSEMI class_body tEND

   20 do_block: tDO stmts tEND

   21 while_loop: tWHILE expr tSEMI stmts tEND
   22           | tWHILE expr tSEMI tEND

   23 func: tFUNCTION proto tSEMI stmts tEND
   24     | tFUNCTION proto tSEMI tEND

   25 proto: tIDENT tLPAREN fnargs tRPAREN

   26 fnargs: %empty
   27       | tIDENT
   28       | fnargs tCOMMA tIDENT

   29 args: %empty
   30     | expr
   31     | args tCOMMA expr

   32 number: tNUMBER

   33 bool: tTRUE
   34     | tFALSE

   35 return_expr: tRETURN
   36            | tRETURN expr

   37 string: tSTRING

   38 ternary: expr tQU expr tCOLON expr

   39 ident: tIDENT
   40      | file

   41 file: tFILE

   42 call: tIDENT tLPAREN args tRPAREN

   43 cond: tIF expr tSEMI stmts tEND
   44     | tIF expr tSEMI stmts tELSE stmts tEND

   45 assign: tIDENT tEQ expr

   46 expr: number
   47     | ternary
   48     | bool
   49     | tNULL
   50     | assign
   51     | string
   52     | ident
   53     | call
   54     | tLPAREN expr tRPAREN
   55     | expr tPLUS expr
   56     | expr tMINUS expr
   57     | expr tSLASH expr
   58     | expr tSTAR expr
   59     | expr tGT expr
   60     | expr tGE expr
   61     | expr tLT expr
   62     | expr tLE expr
   63     | expr tSHR expr
   64     | expr tSHL expr
   65     | expr tBOR expr
   66     | expr tBAND expr
   67     | expr tEQEQ expr
   68     | expr tXOR expr
   69     | expr tNEQ expr
   70     | expr tAND expr
   71     | expr tOR expr
   72     | tBNOT expr
   73     | tMINUS expr
   74     | tNOT expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    tIDENT <str> (258) 13 18 19 25 27 28 39 42 45
    tSTRING <str> (259) 37
    tNUMBER <num> (260) 32
    tTRUE (261) 33
    tFALSE (262) 34
    tNULL (263) 49
    tGT (264) 59
    tGE (265) 60
    tLT (266) 61
    tLE (267) 62
    tPLUS (268) 55
    tMINUS (269) 56 73
    tSLASH (270) 57
    tSTAR (271) 58
    tEQ (272) 45
    tEQEQ (273) 67
    tNOT (274) 74
    tNEQ (275) 69
    tAND (276) 70
    tOR (277) 71
    tQU (278) 38
    tSHR (279) 63
    tSHL (280) 64
    tBOR (281) 65
    tBAND (282) 66
    tBNOT (283) 72
    tXOR (284) 68
    tCOLON (285) 38
    tDOT (286)
    tFUNCTION (287) 23 24
    tWHILE (288) 21 22
    tEND (289) 14 15 18 19 20 21 22 23 24 43 44
    tFILE (290) 41
    tMACRO (291)
    tRETURN (292) 35 36
    tIF (293) 43 44
    tELSE (294) 44
    tDO (295) 20
    tCLASS (296) 18 19
    tSTATIC (297)
    tIMPORT (298) 13
    tLPAREN (299) 25 42 54
    tRPAREN (300) 25 42 54
    tLBRACE (301)
    tRBRACE (302)
    tCOMMA (303) 28 31
    tSEMI (304) 3 4 14 15 16 17 18 19 21 22 23 24 43 44
    UNARY (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1 2
        on right: 0
    stmts <node> (53)
        on left: 3 4
        on right: 2 4 14 20 21 23 43 44
    stmt <node> (54)
        on left: 5 6 7 8 9 10 11 12
        on right: 3 4
    import_stmt <node> (55)
        on left: 13
        on right: 11
    class_method (56)
        on left: 14 15
        on right: 16 17
    class_body (57)
        on left: 16 17
        on right: 17 19
    class_stmt <node> (58)
        on left: 18 19
        on right: 12
    do_block <node> (59)
        on left: 20
        on right: 9
    while_loop <node> (60)
        on left: 21 22
        on right: 10
    func <node> (61)
        on left: 23 24
        on right: 6
    proto <node> (62)
        on left: 25
        on right: 14 15 23 24
    fnargs <fnargs> (63)
        on left: 26 27 28
        on right: 25 28
    args <fnargs> (64)
        on left: 29 30 31
        on right: 31 42
    number <node> (65)
        on left: 32
        on right: 46
    bool <node> (66)
        on left: 33 34
        on right: 48
    return_expr <node> (67)
        on left: 35 36
        on right: 7
    string <node> (68)
        on left: 37
        on right: 51
    ternary <node> (69)
        on left: 38
        on right: 47
    ident <node> (70)
        on left: 39 40
        on right: 52
    file <node> (71)
        on left: 41
        on right: 40
    call <node> (72)
        on left: 42
        on right: 53
    cond <node> (73)
        on left: 43 44
        on right: 8
    assign <node> (74)
        on left: 45
        on right: 50
    expr <node> (75)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 5 21 22 30 31 36 38 43 44 45 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74


State 0

    0 $accept: . program $end

    tIDENT     shift, and go to state 1
    tSTRING    shift, and go to state 2
    tNUMBER    shift, and go to state 3
    tTRUE      shift, and go to state 4
    tFALSE     shift, and go to state 5
    tNULL      shift, and go to state 6
    tMINUS     shift, and go to state 7
    tNOT       shift, and go to state 8
    tBNOT      shift, and go to state 9
    tFUNCTION  shift, and go to state 10
    tWHILE     shift, and go to state 11
    tFILE      shift, and go to state 12
    tRETURN    shift, and go to state 13
    tIF        shift, and go to state 14
    tDO        shift, and go to state 15
    tCLASS     shift, and go to state 16
    tIMPORT    shift, and go to state 17
    tLPAREN    shift, and go to state 18

    $default  reduce using rule 1 (program)

    program      go to state 19
    stmts        go to state 20
    stmt         go to state 21
    import_stmt  go to state 22
    class_stmt   go to state 23
    do_block     go to state 24
    while_loop   go to state 25
    func         go to state 26
    number       go to state 27
    bool         go to state 28
    return_expr  go to state 29
    string       go to state 30
    ternary      go to state 31
    ident        go to state 32
    file         go to state 33
    call         go to state 34
    cond         go to state 35
    assign       go to state 36
    expr         go to state 37


State 1

   39 ident: tIDENT .
   42 call: tIDENT . tLPAREN args tRPAREN
   45 assign: tIDENT . tEQ expr

    tEQ      shift, and go to state 38
    tLPAREN  shift, and go to state 39

    $default  reduce using rule 39 (ident)


State 2

   37 string: tSTRING .

    $default  reduce using rule 37 (string)


State 3

   32 number: tNUMBER .

    $default  reduce using rule 32 (number)


State 4

   33 bool: tTRUE .

    $default  reduce using rule 33 (bool)


State 5

   34 bool: tFALSE .

    $default  reduce using rule 34 (bool)


State 6

   49 expr: tNULL .

    $default  reduce using rule 49 (expr)


State 7

   73 expr: tMINUS . expr

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 40


State 8

   74 expr: tNOT . expr

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 41


State 9

   72 expr: tBNOT . expr

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 42


State 10

   23 func: tFUNCTION . proto tSEMI stmts tEND
   24     | tFUNCTION . proto tSEMI tEND

    tIDENT  shift, and go to state 43

    proto  go to state 44


State 11

   21 while_loop: tWHILE . expr tSEMI stmts tEND
   22           | tWHILE . expr tSEMI tEND

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 45


State 12

   41 file: tFILE .

    $default  reduce using rule 41 (file)


State 13

   35 return_expr: tRETURN .
   36            | tRETURN . expr

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    $default  reduce using rule 35 (return_expr)

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 46


State 14

   43 cond: tIF . expr tSEMI stmts tEND
   44     | tIF . expr tSEMI stmts tELSE stmts tEND

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 47


State 15

   20 do_block: tDO . stmts tEND

    tIDENT     shift, and go to state 1
    tSTRING    shift, and go to state 2
    tNUMBER    shift, and go to state 3
    tTRUE      shift, and go to state 4
    tFALSE     shift, and go to state 5
    tNULL      shift, and go to state 6
    tMINUS     shift, and go to state 7
    tNOT       shift, and go to state 8
    tBNOT      shift, and go to state 9
    tFUNCTION  shift, and go to state 10
    tWHILE     shift, and go to state 11
    tFILE      shift, and go to state 12
    tRETURN    shift, and go to state 13
    tIF        shift, and go to state 14
    tDO        shift, and go to state 15
    tCLASS     shift, and go to state 16
    tIMPORT    shift, and go to state 17
    tLPAREN    shift, and go to state 18

    stmts        go to state 48
    stmt         go to state 21
    import_stmt  go to state 22
    class_stmt   go to state 23
    do_block     go to state 24
    while_loop   go to state 25
    func         go to state 26
    number       go to state 27
    bool         go to state 28
    return_expr  go to state 29
    string       go to state 30
    ternary      go to state 31
    ident        go to state 32
    file         go to state 33
    call         go to state 34
    cond         go to state 35
    assign       go to state 36
    expr         go to state 37


State 16

   18 class_stmt: tCLASS . tIDENT tSEMI tEND
   19           | tCLASS . tIDENT tSEMI class_body tEND

    tIDENT  shift, and go to state 49


State 17

   13 import_stmt: tIMPORT . tIDENT

    tIDENT  shift, and go to state 50


State 18

   54 expr: tLPAREN . expr tRPAREN

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 51


State 19

    0 $accept: program . $end

    $end  shift, and go to state 52


State 20

    2 program: stmts .
    4 stmts: stmts . stmt tSEMI

    tIDENT     shift, and go to state 1
    tSTRING    shift, and go to state 2
    tNUMBER    shift, and go to state 3
    tTRUE      shift, and go to state 4
    tFALSE     shift, and go to state 5
    tNULL      shift, and go to state 6
    tMINUS     shift, and go to state 7
    tNOT       shift, and go to state 8
    tBNOT      shift, and go to state 9
    tFUNCTION  shift, and go to state 10
    tWHILE     shift, and go to state 11
    tFILE      shift, and go to state 12
    tRETURN    shift, and go to state 13
    tIF        shift, and go to state 14
    tDO        shift, and go to state 15
    tCLASS     shift, and go to state 16
    tIMPORT    shift, and go to state 17
    tLPAREN    shift, and go to state 18

    $default  reduce using rule 2 (program)

    stmt         go to state 53
    import_stmt  go to state 22
    class_stmt   go to state 23
    do_block     go to state 24
    while_loop   go to state 25
    func         go to state 26
    number       go to state 27
    bool         go to state 28
    return_expr  go to state 29
    string       go to state 30
    ternary      go to state 31
    ident        go to state 32
    file         go to state 33
    call         go to state 34
    cond         go to state 35
    assign       go to state 36
    expr         go to state 37


State 21

    3 stmts: stmt . tSEMI

    tSEMI  shift, and go to state 54


State 22

   11 stmt: import_stmt .

    $default  reduce using rule 11 (stmt)


State 23

   12 stmt: class_stmt .

    $default  reduce using rule 12 (stmt)


State 24

    9 stmt: do_block .

    $default  reduce using rule 9 (stmt)


State 25

   10 stmt: while_loop .

    $default  reduce using rule 10 (stmt)


State 26

    6 stmt: func .

    $default  reduce using rule 6 (stmt)


State 27

   46 expr: number .

    $default  reduce using rule 46 (expr)


State 28

   48 expr: bool .

    $default  reduce using rule 48 (expr)


State 29

    7 stmt: return_expr .

    $default  reduce using rule 7 (stmt)


State 30

   51 expr: string .

    $default  reduce using rule 51 (expr)


State 31

   47 expr: ternary .

    $default  reduce using rule 47 (expr)


State 32

   52 expr: ident .

    $default  reduce using rule 52 (expr)


State 33

   40 ident: file .

    $default  reduce using rule 40 (ident)


State 34

   53 expr: call .

    $default  reduce using rule 53 (expr)


State 35

    8 stmt: cond .

    $default  reduce using rule 8 (stmt)


State 36

   50 expr: assign .

    $default  reduce using rule 50 (expr)


State 37

    5 stmt: expr .
   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr

    tGT     shift, and go to state 55
    tGE     shift, and go to state 56
    tLT     shift, and go to state 57
    tLE     shift, and go to state 58
    tPLUS   shift, and go to state 59
    tMINUS  shift, and go to state 60
    tSLASH  shift, and go to state 61
    tSTAR   shift, and go to state 62
    tEQEQ   shift, and go to state 63
    tNEQ    shift, and go to state 64
    tAND    shift, and go to state 65
    tOR     shift, and go to state 66
    tQU     shift, and go to state 67
    tSHR    shift, and go to state 68
    tSHL    shift, and go to state 69
    tBOR    shift, and go to state 70
    tBAND   shift, and go to state 71
    tXOR    shift, and go to state 72

    $default  reduce using rule 5 (stmt)


State 38

   45 assign: tIDENT tEQ . expr

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 73


State 39

   42 call: tIDENT tLPAREN . args tRPAREN

    tIDENT   shift, and go to state 1
    tSTRING  shift, and go to state 2
    tNUMBER  shift, and go to state 3
    tTRUE    shift, and go to state 4
    tFALSE   shift, and go to state 5
    tNULL    shift, and go to state 6
    tMINUS   shift, and go to state 7
    tNOT     shift, and go to state 8
    tBNOT    shift, and go to state 9
    tFILE    shift, and go to state 12
    tLPAREN  shift, and go to state 18

    $default  reduce using rule 29 (args)

    args     go to state 74
    number   go to state 27
    bool     go to state 28
    string   go to state 30
    ternary  go to state 31
    ident    go to state 32
    file     go to state 33
    call     go to state 34
    assign   go to state 36
    expr     go to state 75


State 40

   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr
   73     | tMINUS expr .

    $default  reduce using rule 73 (expr)


State 41

   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr
   74     | tNOT expr .

    $default  reduce using rule 74 (expr)


State 42

   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr
   72     | tBNOT expr .

    $default  reduce using rule 72 (expr)


State 43

   25 proto: tIDENT . tLPAREN fnargs tRPAREN

    tLPAREN  shift, and go to state 76


State 44

   23 func: tFUNCTION proto . tSEMI stmts tEND
   24     | tFUNCTION proto . tSEMI tEND

    tSEMI  shift, and go to state 77


State 45

   21 while_loop: tWHILE expr . tSEMI stmts tEND
   22           | tWHILE expr . tSEMI tEND
   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr

    tGT     shift, and go to state 55
    tGE     shift, and go to state 56
    tLT     shift, and go to state 57
    tLE     shift, and go to state 58
    tPLUS   shift, and go to state 59
    tMINUS  shift, and go to state 60
    tSLASH  shift, and go to state 61
    tSTAR   shift, and go to state 62
    tEQEQ   shift, and go to state 63
    tNEQ    shift, and go to state 64
    tAND    shift, and go to state 65
    tOR     shift, and go to state 66
    tQU     shift, and go to state 67
    tSHR    shift, and go to state 68
    tSHL    shift, and go to state 69
    tBOR    shift, and go to state 70
    tBAND   shift, and go to state 71
    tXOR    shift, and go to state 72
    tSEMI   shift, and go to state 78


State 46

   36 return_expr: tRETURN expr .
   38 ternary: expr . tQU expr tCOLON expr
   55 expr: expr . tPLUS expr
   56     | expr . tMINUS expr
   57     | expr . tSLASH expr
   58     | expr . tSTAR expr
   59     | expr . tGT expr
   60     | expr . tGE expr
   61     | expr . tLT expr
   62     | expr . tLE expr
   63     | expr . tSHR expr
   64     | expr . tSHL expr
   65     | expr . tBOR expr
   66     | expr . tBAND expr
   67     | expr . tEQEQ expr
   68     | expr . tXOR expr
   69     | expr . tNEQ expr
   70     | expr . tAND expr
   71     | expr . tOR expr
